--- a/subcategories/finance-retirement.html
+++ b/subcategories/finance-retirement.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head> 
-<link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
-<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-<link rel="shortcut icon" href="/favicon.ico" />
-<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
-<link rel="manifest" href="/site.webmanifest" />
+<link rel="icon" type="image/png" href="https://calcdomain.com/favicon-96x96.png" sizes="96x96" />
+<link rel="icon" type="image/svg+xml" href="https://calcdomain.com/favicon.svg" />
+<link rel="shortcut icon" href="https://calcdomain.com/favicon.ico" />
+<link rel="apple-touch-icon" sizes="180x180" href="https://calcdomain.com/apple-touch-icon.png" />
+<link rel="manifest" href="https://calcdomain.com/site.webmanifest" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Retirement Calculators - Plan Savings & Income | CalcDomain</title>
-    <meta name="description" content="Retirement calculators for pensions, SIPPs, IRAs, annuities, 401(k)s, and goal-based income planning. Compare scenarios and stay on track."/>
+    <meta name="description" content="Retirement calculators for pensions, SIPPs, IRAs, annuities, 401(k)s, and goal-based income planning. Compare scenarios and stay on track."https://calcdomain.com/>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <style>
@@ -25,8 +25,8 @@
       };
     </script>
     <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml.js"></script>
-    <link rel="preload" href="/assets/js/mobile-menu.js" as="script">
-    <link rel="preload" href="/assets/js/page-enhancements.js" as="script">
+    <link rel="preload" href="https://calcdomain.com/assets/js/mobile-menu.js" as="script">
+    <link rel="preload" href="https://calcdomain.com/assets/js/page-enhancements.js" as="script">
 </head>
 <body class="bg-gray-50 text-gray-800">
 
@@ -36,7 +36,7 @@
             <div class="w-full max-w-md hidden md:block">
                 <div class="relative">
                     <input type="search" placeholder="Search for a calculator..." class="w-full py-2 px-4 border border-gray-300 rounded-full focus:outline-none focus:ring-2 focus:ring-blue-500" autocomplete="off">
-                    <svg class="w-5 h-5 absolute right-4 top-1/2 -translate-y-1/2 text-gray-400" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"/></svg>
+                    <svg class="w-5 h-5 absolute right-4 top-1/2 -translate-y-1/2 text-gray-400" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"https://calcdomain.com/></svg>
                 </div>
             </div>
             <div class="hidden md:block"></div>
@@ -61,7 +61,7 @@
                     <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
                         <a href="https://calcdomain.com/retirement.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
                             <div class="bg-blue-100 p-3 rounded-full">
-                                <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"/></svg>
+                                <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"https://calcdomain.com/></svg>
                             </div>
                             <div>
                                 <h3 class="font-semibold text-gray-800">Retirement Calculator</h3>
@@ -71,7 +71,7 @@
 
                         <a href="https://calcdomain.com/pension-payout.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
                             <div class="bg-blue-100 p-3 rounded-full">
-                                <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"/></svg>
+                                <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"https://calcdomain.com/></svg>
                             </div>
                             <div>
                                 <h3 class="font-semibold text-gray-800">Pension Payout Calculator</h3>
@@ -81,7 +81,7 @@
 
                         <a href="https://calcdomain.com/pension.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
                             <div class="bg-blue-100 p-3 rounded-full">
-                                <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"/></svg>
+                                <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"https://calcdomain.com/></svg>
                             </div>
                             <div>
                                 <h3 class="font-semibold text-gray-800">Pension Calculator (DB & DC)</h3>
@@ -91,7 +91,7 @@
 
                         <a href="https://calcdomain.com/sipp.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
                             <div class="bg-blue-100 p-3 rounded-full">
-                                <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"/></svg>
+                                <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"https://calcdomain.com/></svg>
                             </div>
                             <div>
                                 <h3 class="font-semibold text-gray-800">SIPP Calculator (UK)</h3>
@@ -101,7 +101,7 @@
 
                         <a href="https://calcdomain.com/ira.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
                             <div class="bg-blue-100 p-3 rounded-full">
-                                <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"/></svg>
+                                <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"https://calcdomain.com/></svg>
                             </div>
                             <div>
                                 <h3 class="font-semibold text-gray-800">IRA Calculator</h3>
@@ -111,7 +111,7 @@
 
                         <a href="https://calcdomain.com/roth-ira.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
                             <div class="bg-blue-100 p-3 rounded-full">
-                                <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"/></svg>
+                                <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"https://calcdomain.com/></svg>
                             </div>
                             <div>
                                 <h3 class="font-semibold text-gray-800">Roth IRA Calculator</h3>
@@ -121,7 +121,7 @@
 
                         <a href="https://calcdomain.com/annuity.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
                             <div class="bg-blue-100 p-3 rounded-full">
-                                <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"/></svg>
+                                <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"https://calcdomain.com/></svg>
                             </div>
                             <div>
                                 <h3 class="font-semibold text-gray-800">Annuity Calculator</h3>
@@ -131,7 +131,7 @@
 
                         <a href="https://calcdomain.com/401k.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
                             <div class="bg-blue-100 p-3 rounded-full">
-                                <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"/></svg>
+                                <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"https://calcdomain.com/></svg>
                             </div>
                             <div>
                                 <h3 class="font-semibold text-gray-800">401(k) Calculator</h3>
@@ -141,7 +141,7 @@
 
                         <a href="https://calcdomain.com/roth-conversion.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
                             <div class="bg-blue-100 p-3 rounded-full">
-                                <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"/></svg>
+                                <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"https://calcdomain.com/></svg>
                             </div>
                             <div>
                                 <h3 class="font-semibold text-gray-800">Roth Conversion Analyzer</h3>
@@ -193,7 +193,7 @@
                         <h3 class="font-bold text-lg mb-4">Related Finance Subcategories</h3>
                         <ul class="space-y-3 text-sm">
                             <li><a href="finance-investment.html" class="text-blue-600 hover:underline flex justify-between">Investments <span class="text-gray-400">46</span></a></li>
-                            <li><a href="finance-taxes.html" class="text-blue-600 hover:underline flex justify-between">Taxes <span class="text-gray-400">108</span></a></li>
+                            <li><a href="taxes.html" class="text-blue-600 hover:underline flex justify-between">Taxes <span class="text-gray-400">108</span></a></li>
                             <li><a href="business-small-biz.html" class="text-blue-600 hover:underline flex justify-between">Business Planning <span class="text-gray-400">64</span></a></li>
                         </ul>
                     </div>
