--- a/subcategories/hobbies.html
+++ b/subcategories/hobbies.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head> 
-<link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
-<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-<link rel="shortcut icon" href="/favicon.ico" />
-<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
-<link rel="manifest" href="/site.webmanifest" />
+<link rel="icon" type="image/png" href="https://calcdomain.com/favicon-96x96.png" sizes="96x96" />
+<link rel="icon" type="image/svg+xml" href="https://calcdomain.com/favicon.svg" />
+<link rel="shortcut icon" href="https://calcdomain.com/favicon.ico" />
+<link rel="apple-touch-icon" sizes="180x180" href="https://calcdomain.com/apple-touch-icon.png" />
+<link rel="manifest" href="https://calcdomain.com/site.webmanifest" />
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-widt h, initial-scale=1.0">
     <title>Hobbies Calculators - Professional Tools for Hobbies</title>
     <meta name="description" content="Support your creative pursuits with calculators for crafting, collecting, gaming, and recreational activities.">
     
@@ -19,7 +19,7 @@
         .card-hover:hover { transform: translateY(-5px); box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05); }
     </style>
     <!-- Ezoic, Google AdSense, GSC, and GA scripts would go here -->
-<script src="search.js" defer></script>
+<script src="https://calcdomain.com/search.js" defer></script>
 <!-- MathJax for LaTeX formulas -->
 <script>
   window.MathJax = {
@@ -31,8 +31,8 @@
   };
 </script>
 <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml.js"></script>
-<link rel="preload" href="/assets/js/mobile-menu.js" as="script">
-<link rel="preload" href="/assets/js/page-enhancements.js" as="script">
+<link rel="preload" href="https://calcdomain.com/assets/js/mobile-menu.js" as="script">
+<link rel="preload" href="https://calcdomain.com/assets/js/page-enhancements.js" as="script">
 
 </head>
 <body class="bg-gray-50 text-gray-800">
@@ -73,7 +73,7 @@
                 <!-- Calculators Grid -->
                 <section>
                     <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
-                            <a href="knitting-calculator.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
+                            <a href="https://calcdomain.com/knitting-calculator.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
                                 <div class="bg-blue-100 p-3 rounded-full">
                                     <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"></path></svg>
                                 </div>
@@ -81,7 +81,7 @@
                                     <h3 class="font-semibold text-gray-800">Knitting Calculator</h3>
                                     <p class="text-sm text-gray-600 mt-1">Calculate knitting calculator quickly and accurately.</p>
                                 </div>
-                            </a>                            <a href="crochet-calculator.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
+                            </a>                            <a href="https://calcdomain.com/crochet-calculator.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
                                 <div class="bg-blue-100 p-3 rounded-full">
                                     <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"></path></svg>
                                 </div>
@@ -89,7 +89,7 @@
                                     <h3 class="font-semibold text-gray-800">Crochet Calculator</h3>
                                     <p class="text-sm text-gray-600 mt-1">Calculate crochet calculator quickly and accurately.</p>
                                 </div>
-                            </a>                            <a href="sewing-calculator.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
+                            </a>                            <a href="https://calcdomain.com/sewing-calculator.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
                                 <div class="bg-blue-100 p-3 rounded-full">
                                     <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"></path></svg>
                                 </div>
@@ -97,7 +97,7 @@
                                     <h3 class="font-semibold text-gray-800">Sewing Calculator</h3>
                                     <p class="text-sm text-gray-600 mt-1">Calculate sewing calculator quickly and accurately.</p>
                                 </div>
-                            </a>                            <a href="quilting-calculator.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
+                            </a>                            <a href="https://calcdomain.com/quilting-calculator.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
                                 <div class="bg-blue-100 p-3 rounded-full">
                                     <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"></path></svg>
                                 </div>
@@ -105,7 +105,7 @@
                                     <h3 class="font-semibold text-gray-800">Quilting Calculator</h3>
                                     <p class="text-sm text-gray-600 mt-1">Calculate quilting calculator quickly and accurately.</p>
                                 </div>
-                            </a>                            <a href="embroidery-calculator.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
+                            </a>                            <a href="https://calcdomain.com/embroidery-calculator.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
                                 <div class="bg-blue-100 p-3 rounded-full">
                                     <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"></path></svg>
                                 </div>
@@ -113,7 +113,7 @@
                                     <h3 class="font-semibold text-gray-800">Embroidery Calculator</h3>
                                     <p class="text-sm text-gray-600 mt-1">Calculate embroidery calculator quickly and accurately.</p>
                                 </div>
-                            </a>                            <a href="cross-stitch-calculator.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
+                            </a>                            <a href="https://calcdomain.com/cross-stitch-calculator.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
                                 <div class="bg-blue-100 p-3 rounded-full">
                                     <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"></path></svg>
                                 </div>
@@ -121,7 +121,7 @@
                                     <h3 class="font-semibold text-gray-800">Cross Stitch Calculator</h3>
                                     <p class="text-sm text-gray-600 mt-1">Calculate cross stitch calculator quickly and accurately.</p>
                                 </div>
-                            </a>                            <a href="scrapbooking-calculator.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
+                            </a>                            <a href="https://calcdomain.com/scrapbooking-calculator.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
                                 <div class="bg-blue-100 p-3 rounded-full">
                                     <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"></path></svg>
                                 </div>
@@ -129,7 +129,7 @@
                                     <h3 class="font-semibold text-gray-800">Scrapbooking Calculator</h3>
                                     <p class="text-sm text-gray-600 mt-1">Calculate scrapbooking calculator quickly and accurately.</p>
                                 </div>
-                            </a>                            <a href="card-making-calculator.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
+                            </a>                            <a href="https://calcdomain.com/card-making-calculator.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
                                 <div class="bg-blue-100 p-3 rounded-full">
                                     <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"></path></svg>
                                 </div>
@@ -137,7 +137,7 @@
                                     <h3 class="font-semibold text-gray-800">Card Making Calculator</h3>
                                     <p class="text-sm text-gray-600 mt-1">Calculate card making calculator quickly and accurately.</p>
                                 </div>
-                            </a>                            <a href="origami-calculator.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
+                            </a>                            <a href="https://calcdomain.com/origami-calculator.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
                                 <div class="bg-blue-100 p-3 rounded-full">
                                     <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"></path></svg>
                                 </div>
@@ -145,7 +145,7 @@
                                     <h3 class="font-semibold text-gray-800">Origami Calculator</h3>
                                     <p class="text-sm text-gray-600 mt-1">Calculate origami calculator quickly and accurately.</p>
                                 </div>
-                            </a>                            <a href="paper-craft-calculator.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
+                            </a>                            <a href="https://calcdomain.com/paper-craft-calculator.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
                                 <div class="bg-blue-100 p-3 rounded-full">
                                     <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"></path></svg>
                                 </div>
@@ -153,7 +153,7 @@
                                     <h3 class="font-semibold text-gray-800">Paper Craft Calculator</h3>
                                     <p class="text-sm text-gray-600 mt-1">Calculate paper craft calculator quickly and accurately.</p>
                                 </div>
-                            </a>                            <a href="jewelry-making-calculator.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
+                            </a>                            <a href="https://calcdomain.com/jewelry-making-calculator.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
                                 <div class="bg-blue-100 p-3 rounded-full">
                                     <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"></path></svg>
                                 </div>
@@ -161,7 +161,7 @@
                                     <h3 class="font-semibold text-gray-800">Jewelry Making Calculator</h3>
                                     <p class="text-sm text-gray-600 mt-1">Calculate jewelry making calculator quickly and accurately.</p>
                                 </div>
-                            </a>                            <a href="pottery-calculator.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
+                            </a>                            <a href="https://calcdomain.com/pottery-calculator.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
                                 <div class="bg-blue-100 p-3 rounded-full">
                                     <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"></path></svg>
                                 </div>
@@ -169,7 +169,7 @@
                                     <h3 class="font-semibold text-gray-800">Pottery Calculator</h3>
                                     <p class="text-sm text-gray-600 mt-1">Calculate pottery calculator quickly and accurately.</p>
                                 </div>
-                            </a>                            <a href="woodworking-calculator.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
+                            </a>                            <a href="https://calcdomain.com/woodworking-calculator.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
                                 <div class="bg-blue-100 p-3 rounded-full">
                                     <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"></path></svg>
                                 </div>
@@ -177,7 +177,7 @@
                                     <h3 class="font-semibold text-gray-800">Woodworking Calculator</h3>
                                     <p class="text-sm text-gray-600 mt-1">Calculate woodworking calculator quickly and accurately.</p>
                                 </div>
-                            </a>                            <a href="gardening-calculator.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
+                            </a>                            <a href="https://calcdomain.com/gardening-calculator.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
                                 <div class="bg-blue-100 p-3 rounded-full">
                                     <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"></path></svg>
                                 </div>
@@ -185,7 +185,7 @@
                                     <h3 class="font-semibold text-gray-800">Gardening Calculator</h3>
                                     <p class="text-sm text-gray-600 mt-1">Calculate gardening calculator quickly and accurately.</p>
                                 </div>
-                            </a>                            <a href="cooking-calculator.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
+                            </a>                            <a href="https://calcdomain.com/cooking-calculator.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
                                 <div class="bg-blue-100 p-3 rounded-full">
                                     <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"></path></svg>
                                 </div>
