--- a/subcategories/geometry.html
+++ b/subcategories/geometry.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head> 
-<link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
-<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-<link rel="shortcut icon" href="/favicon.ico" />
-<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
-<link rel="manifest" href="/site.webmanifest" />
+<link rel="icon" type="image/png" href="https://calcdomain.com/favicon-96x96.png" sizes="96x96" />
+<link rel="icon" type="image/svg+xml" href="https://calcdomain.com/favicon.svg" />
+<link rel="shortcut icon" href="https://calcdomain.com/favicon.ico" />
+<link rel="apple-touch-icon" sizes="180x180" href="https://calcdomain.com/apple-touch-icon.png" />
+<link rel="manifest" href="https://calcdomain.com/site.webmanifest" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Geometry Calculators - Professional Tools for Geometry</title>
@@ -31,8 +31,8 @@
   };
 </script>
 <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml.js"></script>
-<link rel="preload" href="/assets/js/mobile-menu.js" as="script">
-<link rel="preload" href="/assets/js/page-enhancements.js" as="script">
+<link rel="preload" href="https://calcdomain.com/assets/js/mobile-menu.js" as="script">
+<link rel="preload" href="https://calcdomain.com/assets/js/page-enhancements.js" as="script">
 
 </head>
 <body class="bg-gray-50 text-gray-800">
@@ -59,8 +59,8 @@
             <main class="w-full lg:w-2/3">
                 <!-- Breadcrumbs -->
                 <nav class="text-sm mb-4 text-gray-600">
-                    <a href="/index.html" class="hover:text-blue-600">Home</a> &raquo;
-                    <a href="/math-conversions.html" class="hover:text-blue-600">Math & Conversion Calculators</a> &raquo;
+                    <a href="https://calcdomain.com/index.html" class="hover:text-blue-600">Home</a> &raquo;
+                    <a href="https://calcdomain.com/math-conversions.html" class="hover:text-blue-600">Math & Conversion Calculators</a> &raquo;
                     <span>Geometry</span>
                 </nav>
 
